--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ body.Mahdlgupf { --site-bg: url('assets/Mahdlgupf/Bild4.jpg'); }
 /* Große Bildschirme: Bild nicht skalieren, Ränder hellgrau */
 @media (min-width: 1200px) {
   body::before {
+    width: auto;
+    height: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-size: auto;       /* Originalgröße beibehalten */
     background-position: center;
     background-repeat: no-repeat;
