--- a/style.css
+++ b/style.css
@@ -43,10 +43,10 @@ body.Mahdlgupf { --site-bg: url('assets/Mahdlgupf/Bild4.jpg'); }
 /* Große Bildschirme: Bild in Originalgröße, Ränder hellgrau */
 @media (min-width: 1200px) {
   body::before {
-    background-size: auto;       /* Originalgröße, keine Skalierung */
+    background-size: cover;       /* Originalgröße, keine Skalierung auto*/
     background-position: center;
     background-repeat: no-repeat;
-    background-color: #f0f0f0;  /* Ränder hellgrau */
+    background-color: #808080;  /* Ränder mittelgrau */
   }
 }
 
